# vector_lens

./: Cargo.toml  README.md
src/: main.rs  resources.rs  utils.rs
src/canvas/: mod.rs
src/operators/: messages.rs  mod.rs  op.rs
src/operators/category/: cleaning.rs  io.rs  mod.rs
src/ui/: mod.rs  styles.rs
src/ui/widgets/: console_panel.rs  home_menu.rs  mod.rs  operator_context.rs  operator_panel.rs  property_containers.rs  property_panel.rs
