[package]
name = "treyvisai"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version="0.18.1", features=[
    "png",
    "jpeg",
    "webp",
    "experimental_bevy_ui_widgets",
    "mesh_picking",
    "sprite_picking"
]}
# makara = { path = "../makara" }
makara = "0.2.9"
anyhow = "1.0.101"
serde_json = "1.0.149"
serde = "1.0.228"
polars = "0.53.0"
bevy_prototype_lyon = "0.16.0"

[dependencies.uuid]
version = "1.21.0"
features = [ "v4" ]
